--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "node": "~v0.4.7"
   },
   "dependencies": {
-    "nko": "~0.1.1"
+    "nko": "~0.1.1",
+    "express" : "~2.4.6",
+    "ejs" : "~0.4.3"
   },
   "devDependencies": {}
 }
