added basic socket.io functionality

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "nko": "~0.1.1",
     "express" : "~2.4.6",
-    "ejs" : "~0.4.3"
+    "ejs" : "~0.4.3",
+		"socket.io": "~0.7.9",
+		"socket.io-client": "~0.7.9"
   },
   "devDependencies": {}
 }
