--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "url": "git://github.com/ulmapi/livemap.git"
   },
   "engines": {
-    "node": ">= v0.4.7"
+    "node": ">= v0.10"
   },
   "dependencies": {
-    "express" : ">= 2.4.6",
-    "ejs" : ">= 0.4.3",
-		"socket.io": ">= 0.7.9",
-		"socket.io-client": ">= 0.7.9"
+    "ejs": "~1.0.0",
+    "errorhandler": "~1.0.1",
+    "express": "~4.4.1",
+    "morgan": "~1.1.1",
+    "socket.io": "~1.0.4",
+    "socket.io-client": "~1.0.4"
   },
   "devDependencies": {}
 }
